scripts/nullness/annotator/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8.txt
../annotator/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/statemachine/Miner.java:18: error: [assignment] incompatible types in assignment.
        machine = new StateMachine<Miner>(this);
                  ^
  found   : @UnderInitialization(ch2.statemachine.StateMachine.class) @NonNull StateMachine<@Initialized @NonNull Miner>
  required: @Initialized @NonNull StateMachine<@Initialized @NonNull Miner>
../annotator/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/statemachine/Miner.java:18: error: [argument] incompatible argument for parameter owner of StateMachine constructor.
        machine = new StateMachine<Miner>(this);
                                          ^
  found   : @UnderInitialization(ch2.statemachine.BaseGameEntity.class) @NonNull Miner
  required: @Initialized @NonNull Miner
../annotator/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/statemachine/StateMachine.java:10: error: [initialization.fields.uninitialized] the constructor does not initialize fields: current, previous
    public StateMachine(T owner) {
           ^
../annotator/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/troll/Troll.java:8: error: [dereference.of.nullable] dereference of possibly-null reference state
        state.execute(this);
        ^
../annotator/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/msg/Miner.java:18: error: [assignment] incompatible types in assignment.
        machine = new StateMachine<Miner>(this);
                  ^
  found   : @UnderInitialization(ch2.msg.StateMachine.class) @NonNull StateMachine<@Initialized @NonNull Miner>
  required: @Initialized @NonNull StateMachine<@Initialized @NonNull Miner>
../annotator/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/msg/Miner.java:18: error: [argument] incompatible argument for parameter owner of StateMachine constructor.
        machine = new StateMachine<Miner>(this);
                                          ^
  found   : @UnderInitialization(ch2.msg.BaseGameEntity.class) @NonNull Miner
  required: @Initialized @NonNull Miner
../annotator/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/msg/StateMachine.java:11: error: [initialization.fields.uninitialized] the constructor does not initialize fields: current, previous
    public StateMachine(T owner) {
           ^
../annotator/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/msg/MinersWife.java:10: error: [assignment] incompatible types in assignment.
        machine = new StateMachine<MinersWife>(this);
                  ^
  found   : @UnderInitialization(ch2.msg.StateMachine.class) @NonNull StateMachine<@Initialized @NonNull MinersWife>
  required: @Initialized @NonNull StateMachine<@Initialized @NonNull MinersWife>
../annotator/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/msg/MinersWife.java:10: error: [argument] incompatible argument for parameter owner of StateMachine constructor.
        machine = new StateMachine<MinersWife>(this);
                                               ^
  found   : @UnderInitialization(ch2.msg.BaseGameEntity.class) @NonNull MinersWife
  required: @Initialized @NonNull MinersWife
../annotator/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/westworldwithwoman/Miner.java:18: error: [assignment] incompatible types in assignment.
        machine = new StateMachine<Miner>(this);
                  ^
  found   : @UnderInitialization(ch2.westworldwithwoman.StateMachine.class) @NonNull StateMachine<@Initialized @NonNull Miner>
  required: @Initialized @NonNull StateMachine<@Initialized @NonNull Miner>
../annotator/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/westworldwithwoman/Miner.java:18: error: [argument] incompatible argument for parameter owner of StateMachine constructor.
        machine = new StateMachine<Miner>(this);
                                          ^
  found   : @UnderInitialization(ch2.westworldwithwoman.BaseGameEntity.class) @NonNull Miner
  required: @Initialized @NonNull Miner
../annotator/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/westworldwithwoman/StateMachine.java:10: error: [initialization.fields.uninitialized] the constructor does not initialize fields: current, previous
    public StateMachine(T owner) {
           ^
../annotator/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/westworldwithwoman/MinersWife.java:9: error: [assignment] incompatible types in assignment.
        machine = new StateMachine<MinersWife>(this);
                  ^
  found   : @UnderInitialization(ch2.westworldwithwoman.StateMachine.class) @NonNull StateMachine<@Initialized @NonNull MinersWife>
  required: @Initialized @NonNull StateMachine<@Initialized @NonNull MinersWife>
../annotator/urlcc19a18863_born2snipe_Programming_Game_AI_tgz-pJ8-ch2_msg_MiningTestJ8/src/ch2/westworldwithwoman/MinersWife.java:9: error: [argument] incompatible argument for parameter owner of StateMachine constructor.
        machine = new StateMachine<MinersWife>(this);
                                               ^
  found   : @UnderInitialization(ch2.westworldwithwoman.BaseGameEntity.class) @NonNull MinersWife
  required: @Initialized @NonNull MinersWife
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
14 errors
